<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".ui.login.MainActivity">

    <TextView
        android:id="@+id/tv_top_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:fontFamily="@font/regular_font"
        android:gravity="center"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <ImageView
        android:id="@+id/iv_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/landing_graphic"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_top_text"
        app:srcCompat="@drawable/fitness_tracker_amico" />

    <LinearLayout
        android:id="@+id/lt_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/enriqueta"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="serif"
            android:text="@string/sign_in_to_account"
            android:textColor="@color/color_on_dark_grey"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:hint="@string/enter_username"
            android:textColorHint="#B5B5B5"
            app:boxStrokeColor="#B5B5B5"
            app:boxBackgroundColor="@android:color/transparent"
            app:hintTextColor="@color/color_on_dark_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/color_on_dark_grey" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_password"
            app:boxBackgroundColor="@android:color/transparent"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/color_on_dark_grey"
            android:textColorHint="#B5B5B5"
            app:boxStrokeColor="#B5B5B5"
            app:hintTextColor="@color/color_on_dark_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/color_on_dark_grey" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/Material.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/enriqueta"
        android:includeFontPadding="false"
        android:paddingVertical="12dp"
        android:text="@string/login"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_swipe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        android:elevation="2dp"
        android:fontFamily="@font/enriqueta"
        android:includeFontPadding="false"
        android:paddingVertical="18dp"
        android:text="@string/swipe_to_sign_in"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/color_on_dark_grey"
        android:textSize="14sp"
        app:drawableTopCompat="@drawable/arrow_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>