<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notification.NotificationActivity">

    <ImageView
        android:id="@+id/back_img"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/icon_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/enriqueta"
        android:text="@string/notifications"
        android:textAlignment="center"
        android:layout_marginEnd="48dp"
        android:textStyle="bold"
        android:textColor="@color/black_white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_img"
        app:layout_constraintTop_toTopOf="@+id/back_img" />
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_notification"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        tools:listitem="@layout/item_notifications"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_img"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/lt_no_notification"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_img"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/ic_notifications" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/no_notifications"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>