<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.upload.FileUploadActivity">

    <ImageView
        android:id="@+id/back_img"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/icon_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/enriqueta"
        android:text="@string/upload_media"
        android:textAlignment="center"
        android:layout_marginEnd="48dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_img"
        app:layout_constraintTop_toTopOf="@+id/back_img" />


    <TextView
        android:id="@+id/text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/fill_fields"
        android:textAlignment="center"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_img"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_choose_media"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_default_radius"
        app:cardElevation="0dp"
        android:layout_margin="20dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/color_on_dark_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/iv_upload"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/cloud_upload"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_upload_subheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_media_files"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_upload"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btn_add_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/browse_file"
                android:textAllCaps="false"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_upload_subheading"/>

            <RelativeLayout
                android:id="@+id/iv_selected_file"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:elevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.media3.ui.PlayerView
                    android:id="@+id/exo_player_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:show_buffering="when_playing"
                    android:visibility="gone"
                    app:buffered_color="@color/green"
                    app:controller_layout_id="@layout/layout_exo_control"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_choose_media"
        app:layout_constraintVertical_bias="0">

        <Spinner
            android:id="@+id/cat_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/categories" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="Title*"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:textColor="@color/black"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="Description*"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:textColor="@color/black"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        style="@style/Material.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/enriqueta"
        android:includeFontPadding="false"
        android:paddingVertical="12dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>